--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </style>
 </head>
 <body>	
-<div class="row">
+<!--<div class="row">
 <div class="large-12 columns">
 <div class="reveal" id="Modal1" data-reveal><img src="img/slides/slide-mqsite.jpg" alt="Space"></div>
 </div>
@@ -29,7 +29,7 @@
 <a href="index.html"><img class="mtm" src="img/logo.jpg" alt="Archi Castro | Web Developer"></a>
 </div>
 </div>
-</div>
+</div>-->
 <div id="bannerwrap">
 <div class="row">
 <div class="large-12 columns">
@@ -39,9 +39,9 @@
 <img class="mtxl" src="img/archi.png" alt="Archi Castro Portfolio"> 
 </div>
 <div class="large-9 medium-9 columns mtc">	
-<div class="pll">	
+<div class="pll" id="main">	
 <h1>WordPress & Front-end Developer</h1>
-<h2>Hi, I'm Archi. A Filipino WordPress and Front-End Developer. I started working as a Web Designer/ Developer in 2009. I have 6 years experience working with clients, providing responsive front-end development and WordPress websites.</h2>		
+<p>Hi, I'm Archi. A Filipino WordPress and Front-End Developer. I started working as a Web Designer/ Developer in 2009. I have 7 years experience working with clients, providing responsive front-end development and WordPress websites.</p>		
 <div class="row mtxl">
 <div class="large-5 medium-5 columns">
 <h4>Follow me here:</h4>
@@ -71,7 +71,7 @@
 <div class="large-4 medium-4 columns">
 <h4>WordPress Expert</h4>
 <!--<img src="img/wp-logo.png">-->
-<p>I develop website using WordPress for almost 4 years, I’ve been doing Agency, Portfolio, SEO Company Site, E-commerce Using Woo-commerce plugins, and also I use WordPress for blogging. I also do Landing Pages Using OptimizePress, Leadpages and connect it to WordPress, Override Theme CSS and connect API Payment such as Paypal Payment Gateway.</p>
+<p>I develop website using WordPress for almost 6 years, I’ve been doing Agency, Portfolio, SEO Company Site, E-commerce Using Woo-commerce plugins, and also I use WordPress for blogging. I also do Landing Pages Using OptimizePress, Leadpages and connect it to WordPress, Override Theme CSS and connect API Payment such as Paypal Payment Gateway.</p>
 </div>
 <div class="large-4 medium-4 columns">
 <h4>Cpanel and Maintenance</h4>
@@ -84,11 +84,12 @@
 </div>
 </div>
 </div>
+ 
 <div id="workbox">
 <div class="row">
 <div class="large-12 medium-12 columns boxpad">
 <div class="mbxl text-center">
-<h3 class="section-title">Have experienced in:</h3>
+<h3 class="section-title-2">Have experienced in:</h3>
 </div>
 <div class="row">
 <div class="large-3 medium-3 columns">
@@ -102,6 +103,18 @@
 </ul>  
 </div>
 </div>
+
+<div class="large-3 medium-3 columns">
+<div class="callout primary">
+<p>SEO</p>
+<ul>	
+<li>Website Optimization</li>		
+<li>Sitemap Optimization</li>
+<li>On-Page Optimization</li>
+</ul>  
+</div>
+</div>
+
 <div class="large-3 medium-3 columns">
 <div class="callout primary">
 <p>Email Marketing</p> 
@@ -126,6 +139,17 @@
 </div> 
 <div class="large-3 medium-3 columns">
 <div class="callout primary">
+<p>Page Builder</p>
+<ul>	
+<li>Oxygen</li>		
+<li>Elementor</li>
+<li>Divi</li>
+<li>WPBakery</li>
+</ul> 
+</div>
+</div>
+<div class="large-3 medium-3 columns">
+<div class="callout primary">
 <p>Framework</p>
 <ul>
 <li>Foundation</li>
@@ -133,7 +157,32 @@
 </ul>  	   
 </div> 
 </div> 
+ 
+<div class="large-3 medium-3 columns">
+<div class="callout primary">
+<p>Website Hosting & Management</p>
+<ul>	
+<li>CPanel</li>		
+<li>Plesk</li>
+<li>FTP</li>
+<li>phpMyAdmin</li>
+</ul>  
 </div>
+</div>
+
+<div class="large-3 medium-3 columns">
+<div class="callout primary">
+<p>Website Design & Develop</p>
+<ul>	
+<li>E-commerce</li>
+<li>Landing Page</li>
+<li>PSD to HTML</li>
+</ul>  
+</div>
+</div>
+
+</div>
+
 </div>
 </div>
 </div>
@@ -145,16 +194,16 @@
 <div class="row"> 
 <div class="large-12 medium-3 columns mtl mbl gren"><h4>Website Templates</h4></div>
 <div class="large-3 medium-3 columns">
-<a href="landing-page/2115/index.html" target="_blank" class="thumbnail"><img src="img/works/template/lp-1.jpg" alt="Landing Page 1"></a>
+<a target="_blank" class="thumbnail"><img src="img/works/template/lp-1.jpg" alt="Landing Page 1"></a>
 </div>
 <div class="large-3 medium-3 columns">
-<a href="../archi/landing-page/2119/index.html" target="_blank" class="thumbnail"><img src="img/works/template/lp-2.jpg" alt="Landing Page 2"></a>
+<a target="_blank" class="thumbnail"><img src="img/works/template/lp-2.jpg" alt="Landing Page 2"></a>
 </div>
 <div class="large-3 medium-3 columns">
-<a href="../archi/landing-page/2120/index.html" target="_blank" class="thumbnail"><img src="img/works/template/lp-3.jpg" alt="Landing Page 3"></a>
+<a target="_blank" class="thumbnail"><img src="img/works/template/lp-3.jpg" alt="Landing Page 3"></a>
 </div>
 <div class="large-3 medium-3 columns">
-<a href="../archi/landing-page/8/index.html" target="_blank" class="thumbnail"><img src="img/works/template/lp-4.jpg" alt="Landing Page 4"></a>
+<a target="_blank" class="thumbnail"><img src="img/works/template/lp-4.jpg" alt="Landing Page 4"></a>
 </div>
 </div>
 <div class="row"> 
@@ -162,11 +211,7 @@
 <div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/brandmakrr.png" alt="Brandmakrr"></div>
 <div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/cargoplus.png" alt="Brandmakrr"></div>
 <div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/wleph.png" alt="Brandmakrr"></div>
-<div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/zadelle.png" alt="Brandmakrr"></div>
 <div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/norinano.png" alt="Brandmakrr"></div>
-<div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/aminogold.png" alt="Brandmakrr"></div>
-<div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/nutrinano.png" alt="Brandmakrr"></div>
-<div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/bionique.png" alt="Brandmakrr"></div>
 </div>
 </div>
 </div>
