--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 </style>
 </head>
 <body>	
-<!--<div class="row">
+<div class="row">
 <div class="large-12 columns">
 <div class="reveal" id="Modal1" data-reveal><img src="img/slides/slide-mqsite.jpg" alt="Space"></div>
 </div>
@@ -29,7 +29,7 @@
 <a href="index.html"><img class="mtm" src="img/logo.jpg" alt="Archi Castro | Web Developer"></a>
 </div>
 </div>
-</div>-->
+</div>
 <div id="bannerwrap">
 <div class="row">
 <div class="large-12 columns">
@@ -71,7 +71,7 @@
 <div class="large-4 medium-4 columns">
 <h4>WordPress Expert</h4>
 <!--<img src="img/wp-logo.png">-->
-<p>I develop website using WordPress for almost 6 years, I’ve been doing Agency, Portfolio, SEO Company Site, E-commerce Using Woo-commerce plugins, and also I use WordPress for blogging. I also do Landing Pages Using OptimizePress, Leadpages and connect it to WordPress, Override Theme CSS and connect API Payment such as Paypal Payment Gateway.</p>
+<p>Skillful in WordPress Development: Improving an existing WordPress site, applying themes and plugins, Digital Marketing (SEO, Content Creation, etc.). I am proficient in HTML and CSS that can be used for the front-end stuff of WordPress </p>
 </div>
 <div class="large-4 medium-4 columns">
 <h4>Cpanel and Maintenance</h4>
@@ -89,7 +89,7 @@
 <div class="row">
 <div class="large-12 medium-12 columns boxpad">
 <div class="mbxl text-center">
-<h3 class="section-title-2">Have experienced in:</h3>
+<h3 class="section-title-2">Applications I am well versed at:</h3>
 </div>
 <div class="row">
 <div class="large-3 medium-3 columns">
@@ -192,22 +192,22 @@
 <h3 class="section-title">My Works & Design</h3>
 </div>
 <div class="row"> 
-<div class="large-12 medium-3 columns mtl mbl gren"><h4>Website Templates</h4></div>
+<div class="large-12 medium-3 columns mtl mbl dark"><h4>Website Templates</h4></div>
 <div class="large-3 medium-3 columns">
-<a target="_blank" class="thumbnail"><img src="img/works/template/lp-1.jpg" alt="Landing Page 1"></a>
+<a href="img/works/template/lp-1l.jpg" target="_blank" class="thumbnail"><img src="img/works/template/lp-1.jpg" alt="Landing Page 1"></a>
 </div>
 <div class="large-3 medium-3 columns">
-<a target="_blank" class="thumbnail"><img src="img/works/template/lp-2.jpg" alt="Landing Page 2"></a>
+<a href="img/works/template/lp-2l.jpg" target="_blank" class="thumbnail"><img src="img/works/template/lp-2.jpg" alt="Landing Page 2"></a>
 </div>
 <div class="large-3 medium-3 columns">
-<a target="_blank" class="thumbnail"><img src="img/works/template/lp-3.jpg" alt="Landing Page 3"></a>
+<a href="img/works/template/lp-3l.jpg" target="_blank" class="thumbnail"><img src="img/works/template/lp-3.jpg" alt="Landing Page 3"></a>
 </div>
 <div class="large-3 medium-3 columns">
-<a target="_blank" class="thumbnail"><img src="img/works/template/lp-4.jpg" alt="Landing Page 4"></a>
+<a href="img/works/template/lp-4l.jpg" target="_blank" class="thumbnail"><img src="img/works/template/lp-4.jpg" alt="Landing Page 4"></a>
 </div>
 </div>
 <div class="row"> 
-<div class="large-12 medium-3 columns mtxl gren"><h4>Corporate Logo</h4></div>
+<div class="large-12 medium-3 columns mtxl dark"><h4>Corporate Logo</h4></div>
 <div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/brandmakrr.png" alt="Brandmakrr"></div>
 <div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/cargoplus.png" alt="Brandmakrr"></div>
 <div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/wleph.png" alt="Brandmakrr"></div>
