--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
 <div class="large-9 medium-9 columns mtc">	
 <div class="pll" id="main">	
 <h1>WordPress & Front-end Developer</h1>
-<p>Hi, I'm Archi. A Filipino WordPress and Front-End Developer. I started working as a Web Designer/ Developer in 2009. I have 7 years experience working with clients, providing responsive front-end development and WordPress websites.</p>		
+<p>Hi, I'm Archi. A Filipino WordPress and Front-End Developer. I started my career back in 2009. I have experienced working with clients, providing responsive front-end development and WordPress websites.</p>		
 <div class="row mtxl">
 <div class="large-5 medium-5 columns">
-<h4>Follow me here:</h4>
+<h4 class="white">Follow me here:</h4>
 <a href="https://plus.google.com/+ArchimedesCastro" target="_blank"><img src="img/g-logo.png" alt="Archi Castro Google Plus"></a>
 <a href="https://www.facebook.com/archi.castro.jr" target="_blank"><img src="img/fb-logo.png" alt="Archi Castro Facebook Profile Link"></a>
 <a href="https://twitter.com/archi_castro" target="_blank"><img src="img/twitter-logo.png" alt="Archi Castro Twitter Profile Link"></a>
 <a href="https://www.onlinejobs.ph/jobseekers/info/108314" target="_blank"><img src="img/OJ-logo.png" alt="Archi Castro Online Jobs Ph Profile Link"></a>
 </div>
 <div class="large-7 medium-7 columns">
-<h4>Contact Info:</h4>
-<p><strong>Skype ID:</strong> archicastrojr | <strong>Mobile #:</strong> +639091769000</p>
+<h4 class="white">Contact Info:</h4>
+<p>Skype ID: <span class="gren">archicastrojr</span> <br> Mobile number: <span class="gren">+639091769000</span></p>
 </div> 
 </div> 
 </div> 
@@ -68,18 +68,8 @@
 <h3 class="section-title">Technical Skills & Capabilities</h3>
 </div>
 <div class="row" id="skills">
-<div class="large-4 medium-4 columns">
-<h4>WordPress Expert</h4>
-<!--<img src="img/wp-logo.png">-->
-<p>Skillful in WordPress Development: Improving an existing WordPress site, applying themes and plugins, Digital Marketing (SEO, Content Creation, etc.). I am proficient in HTML and CSS that can be used for the front-end stuff of WordPress </p>
-</div>
-<div class="large-4 medium-4 columns">
-<h4>Cpanel and Maintenance</h4>
-<p>Managing Cpanel and do Weekly, Monthly Maintenance to check your website stability is my expertise as well as Backup website, create and manage database, install website, connect hosting to domain, hot link management, ftp access uploading and any other stuff from Cpanel.</p>
-</div>
-<div class="large-4 medium-4 columns">
-<h4>Landing Page Design</h4>
-<p>Develop Landing Pages from Scratch Using Drag and Drop Web app like OptimizePress, Leadpages or even design it from your desired themes and I will handle it and build a High Quality of Landing Page Design that will surely be one of your greatest asset to your business.</p>
+<div class="large-12 medium-12 columns text-center">
+<p>I Design, implement and manage websites using WordPress. Strong understanding of front-end and back-end website development. Familiar with many WordPress plug-ins, themes, and page builders. Maintain well-documented, reusable, and transferrable code. Experienced with responsive and adaptive design, with good knowledge and experienced in SEO.</p>
 </div>
 </div>
 </div>
@@ -188,11 +178,11 @@
 </div>
 <div class="row">
 <div class="boxpad">
-<div class="mbxl text-center">
+<div class="mbxxl text-center">
 <h3 class="section-title">My Works & Design</h3>
 </div>
-<div class="row"> 
-<div class="large-12 medium-3 columns mtl mbl dark"><h4>Website Templates</h4></div>
+<div class="row ptb"> 
+<!--<div class="large-12 medium-3 columns mtl mbl dark"><h4>Website Templates</h4></div>-->
 <div class="large-3 medium-3 columns">
 <a href="img/works/template/lp-1l.jpg" target="_blank" class="thumbnail"><img src="img/works/template/lp-1.jpg" alt="Landing Page 1"></a>
 </div>
@@ -206,8 +196,8 @@
 <a href="img/works/template/lp-4l.jpg" target="_blank" class="thumbnail"><img src="img/works/template/lp-4.jpg" alt="Landing Page 4"></a>
 </div>
 </div>
-<div class="row"> 
-<div class="large-12 medium-3 columns mtxl dark"><h4>Corporate Logo</h4></div>
+<div class="row ptb"> 
+<!--<div class="large-12 medium-3 columns mtxl dark"><h4>Corporate Logo</h4></div>-->
 <div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/brandmakrr.png" alt="Brandmakrr"></div>
 <div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/cargoplus.png" alt="Brandmakrr"></div>
 <div class="large-3 medium-3 columns"><img class="mtm thumbnail" src="img/works/logo/wleph.png" alt="Brandmakrr"></div>
@@ -225,7 +215,7 @@
 <li><a href="https://www.facebook.com/archi.castro.jr" target="_blank"><i class="foundicon-facebook"></i></a></li>
 <li><a href="https://twitter.com/archi_castro" target="_blank"><i class="foundicon-twitter"></i></a></li>
 </ul>
-<small>Archi Castro Jr © 2017</small>
+<small>Archi Castro Jr © 2022</small>
 </div>
 </div>
 </div>
