--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <hr class="featurette-divider">
 	
 	<div class="col-md-7 text-center">
-        <img class="mtxl mbl" src="img/website-btpuk.png" alt="WordPress websites"> 
+        <img class="mtxl mbl" src="img/website-environ.png" alt="WordPress websites"> 
     </div>
 	<div class="col-md-5">
         <h2 class="featurette-heading fw-bold lh-1">Environ Drainage Services</h2>
