--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 	<div class="col-md-5">
         <h2 class="featurette-heading fw-bold lh-1">Best Trading Platform UK</h2>
         <p class="lead mbxl">Best trading programme in the UK for traders</p>
-		<a href="https://btp-staging.onyx-sites.io/" target="_blank" type="button" class="btn btn-primary btn-lg">Visit site</a>
+		<a href="https://btp-staging.onyx-sites.io/" target="_blank" type="button" class="btn btn-primary btn-lg" rel="nofollow">Visit site</a>
     </div>
    
 
@@ -104,7 +104,7 @@
 	<div class="col-md-5">
         <h2 class="featurette-heading fw-bold lh-1">Environ Drainage Services</h2>
         <p class="lead mbxl">Property maintenance experts in SW London</p>
-		<a href="https://environdrainageservices.veryfasthosting.co.uk/about/" target="_blank" type="button" class="btn btn-primary btn-lg">Visit site</a>
+		<a href="https://environdrainageservices.veryfasthosting.co.uk/about/" target="_blank" type="button" class="btn btn-primary btn-lg" rel="nofollow">Visit site</a>
     </div> 
 	
     <hr class="featurette-divider">
@@ -115,7 +115,7 @@
 	<div class="col-md-5">
         <h2 class="featurette-heading fw-bold lh-1">CargoPlus Thailand</h2>
         <p class="lead mbxl">Thailand's leading Logistics service provider.</p>
-		<a href="https://www.cargoplusthailand.com" target="_blank" type="button" class="btn btn-primary btn-lg">Visit site</a>
+		<a href="https://www.cargoplusthailand.com" target="_blank" type="button" class="btn btn-primary btn-lg" rel="nofollow">Visit site</a>
     </div>
     </div>
 
@@ -130,7 +130,7 @@
 	  <div class="col-md-5">
         <h2 class="featurette-heading fw-bold lh-1">Palengke Thailand</h2>
         <p class="lead mbxl">Palengke is the first ever Filipino store in Thailand.</p>
-		<a href="https://palengkethailand.com/" target="_blank" type="button" class="btn btn-primary btn-lg">Visit site</a>
+		<a href="https://palengkethailand.com/" target="_blank" type="button" class="btn btn-primary btn-lg" rel="nofollow">Visit site</a>
       </div>
     </div>
 	
@@ -143,7 +143,7 @@
 	  <div class="col-md-5">
         <h2 class="featurette-heading fw-bold lh-1">Happy Tails</h2>
         <p class="lead mbxl">Distributor of animal supplies and pet accessories.</p>
-		<a href="https://happytails.ph/" target="_blank"  class="btn btn-primary btn-lg">Visit site</a>
+		<a href="https://happytails.ph/" target="_blank"  class="btn btn-primary btn-lg" rel="nofollow">Visit site</a>
       </div>
     </div>
 	
