--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 					<br/><br/>
 					As a WordPress developer with more than 11 years of experience, I've had the chance to work with clients in many different businesses and help them reach their online goals with the solutions I've made. 	</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#!"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#!"><i class="fab fa-facebook-f"></i></a>
+                     <a class="social-icon" href="https://www.linkedin.com/in/archicastrojr/"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://archicastrojr.github.io/index.html"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://twitter.com/archi_castro"><i class="fab fa-twitter"></i></a>
+                        <a class="social-icon" href="https://www.facebook.com/archicastrojr"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
